# intercache

./: .gitignore  AGENTS.md  CLAUDE.md  PHILOSOPHY.md  README.md  kimi.plugin.json  pyproject.toml
.claude-plugin/: plugin.json
hooks/: post-commit.sh
scripts/: launch-intercache.sh
src/intercache/: __init__.py  embeddings.py  manifest.py  server.py  session.py  store.py
tests/: pyproject.toml  test_embeddings.py  test_manifest.py  test_security.py  test_server.py  test_session.py  test_store.py
tests/structural/: test_structure.py
