[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intercache"
version = "0.1.0"
description = "Cross-session semantic cache — content-addressed blobs, manifests, session tracking, and embedding persistence"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MK", email = "mistakeknot@vibeguider.org" }
]
keywords = ["cache", "semantic-cache", "content-addressed", "mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0",
    "einops>=0.7",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
intercache-mcp = "intercache.server:main"

[project.urls]
Homepage = "https://github.com/mistakeknot/intercache"
Repository = "https://github.com/mistakeknot/intercache"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intercache"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
